package maidsafe.priv.lifestuff_manager.protobuf;

message BootstrapEndpoints {
  repeated bytes bootstrap_endpoint_ip = 1;
  repeated uint32 bootstrap_endpoint_port = 2;
}

message Endpoint {
  required bytes ip = 1;
  required int32 port = 2;
}

// contacts file
message Bootstrap {
  repeated Endpoint bootstrap_contacts = 1;
}

message VaultInfo {
  required bytes account_name = 1;
  required bytes fob = 2;
  required bytes chunkstore_path = 3;
  required bool requested_to_run = 4;
  required int32 version = 5;
}

message LifeStuffManagerConfig {
  required uint32 update_interval = 1;  // In seconds
  required Bootstrap bootstrap_endpoints = 2;
  repeated VaultInfo vault_info = 3;
  optional bytes vault_permissions = 4;
}
